# AvatarDocente

./: .env  README.md  comandos.txt  initProject.py  pyproject.toml
avatar-docente/: .gitignore  pyproject.toml
avatar-docente/.github/workflows/: ci.yml
avatar-docente/src/: main.py
avatar-docente/src/config/rubrics/: default_rubric.yml
avatar-docente/src/models/: db_session.py
scripts/: pyproject.toml  run_dev.sh  seed_db.py
src/: main.py
src/config/: settings.py
src/gui/resources/: recursos.qrc
src/gui/ui/: main.ui  prueba1.ui  ventana_principal.ui
src/gui/windows/: _ui_main.py  _ui_prueba1.py  _ui_ventana_principal.py  ventana_principal.py
src/services/: tts_service.py
